# MIA_Proyecto2_202004765

./: README.md  package-lock.json  package.json
Angular/: angular.json  package-lock.json  package.json
Angular/amplify/: team-provider-info.json
Angular/amplify/.config/: project-config.json
Angular/src/: styles.css
Angular/src/app/: app-routing.module.ts  app.module.ts
Angular/src/app/admin/: admin.component.css  admin.component.html  admin.component.ts
Angular/src/app/barra/: barra.component.css  barra.component.html  barra.component.spec.ts
Angular/src/app/barrausr/: barrausr.component.css  barrausr.component.html  barrausr.component.spec.ts
Angular/src/app/cuenta-baja/: cuenta-baja.component.html
Angular/src/app/e404/: e404.component.html
MIA_Proyecto1_202004765/: Analizador.cpp  Analizador.h  CFdisk.cpp  CFdisk.h  CMakeLists.txt  README.md  StructsDatos.h  cExec.cpp  cExec.h  cMkdir.cpp  cMkdir.h  cMkdisk.cpp  cMkdisk.h  cMkfile.cpp  cMkfile.h  cMkfs.cpp  cMkfs.h  cMount.cpp  cMount.h  cRep.cpp  cRep.h  cSyncronice.cpp  cSyncronice.h  estructuras.h  main.cpp  metodosGenerales.cpp  metodosGenerales.h
MIA_Proyecto1_202004765/dnc/: JSON.hpp
backend/: Archvos.js  LogUsuarios.js  cliente_controller.js  cliente_routes.js  datos.json  main.js  package-lock.json  package.json
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.module.ts  autentica-admin.guard.spec.ts  autentica-admin.guard.ts  autentica-usr.guard.spec.ts  autentica-usr.guard.ts
(+62 files in other folders)
