cmake_minimum_required(VERSION 3.22)
project(MIA_Proyecto1_202004765)

set(CMAKE_CXX_STANDARD 14)

add_executable(MIA_Proyecto1_202004765 main.cpp Analizador.cpp Analizador.h estructuras.h cMkdisk.cpp cMkdisk.h CFdisk.cpp CFdisk.h StructsDatos.h metodosGenerales.cpp metodosGenerales.h cMount.cpp cMount.h cMkfs.cpp cMkfs.h cRep.cpp cRep.h cMkdir.cpp cMkdir.h cMkfile.cpp cMkfile.h cExec.cpp cExec.h cSyncronice.cpp cSyncronice.h)
